<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_about">

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.sheinsonapplication.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.sheinsonapplication.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_brands"
        android:name="com.example.sheinsonapplication.ui.brands.BrandsFragment"
        android:label="@string/title_brands"
        tools:layout="@layout/fragment_brands" />

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.sheinsonapplication.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/navigation_contact_us"
        android:name="com.example.sheinsonapplication.ui.contact.ContactUsFragment"
        android:label="@string/title_contact_us"
        tools:layout="@layout/fragment_contact_us" />


</navigation>